# listening-to

./: .env.sample  Cargo.toml  Dockerfile  README.md
.github/workflows/: pr.yml  rust.yml
scripts/: binary.sh
src/: config.rs  lib.rs  listening_to.rs  main.rs  slack.rs  spotify.rs
tests/: config_tests.rs  slack_tests.rs  spotify_tests.rs
