[package]
name = "listening-to"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
cron = "0.15.0"
log = "0.4.28"
openssl = { version = "0.10.74", features = ["vendored"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
