[package]
name = "listening-to"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
cron_tab = { version = "0.2.12", features = ["async"] }
env_logger = "0.11.8"
log = "0.4.28"
openssl = { version = "0.10.75", features = ["vendored"] }
reqwest = { version = "0.12.24", features = ["json"] }
rspotify = { version = "0.15.3", features = ["cli"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
