[package]
name = "listening-to"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
cron_tab = { version = "0.2.13", features = ["async"] }
env_logger = "0.11.10"
log = "0.4.29"
openssl = { version = "0.10.78", features = ["vendored"] }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
rspotify = { version = "0.16.0", features = ["cli"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
